fix base64 and vertical-align

--- a/src/template.scss
+++ b/src/template.scss
@@ -37,5 +37,7 @@
 
 <% _.each(glyphs, function(glyph) { %>.<%= cssClass%>-<%= glyph.fileName %> {
 	@include <%= cssClass%>(<%= glyph.fileName %>);
+	display: inline-block;
+	vertical-align: middle;
 }
 <% }); %>
